[package]
name = "particle-argon"
version = "0.1.0"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Particle Argon dev board support crate"
keywords = ["particle", "argon", "driver", "esp", "wifi"]
categories = ["embedded"]
repository = "https://github.com/rukai/particle-argon"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.4" }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "632572d1cb29ab6badb87c74a95c120b4238f7c6", features = ["defmt", "defmt-trace", "52840"] }
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "632572d1cb29ab6badb87c74a95c120b4238f7c6", features = ["defmt", "defmt-trace"] }
defmt = "0.2.0"

[dev-dependencies]
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "632572d1cb29ab6badb87c74a95c120b4238f7c6", features = ["defmt"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
futures = { version = "0.3.14", default-features = false, features = ["async-await"] }
heapless = "0.7"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
