[package]
name = "particle-argon"
version = "0.1.0"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Particle Argon dev board support crate"
keywords = ["particle", "argon", "driver", "esp", "wifi"]
categories = ["embedded"]
repository = "https://github.com/rukai/particle-argon"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.4" }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "d76cd5ceaf5140c48ef97180beae156c0c0e07c8", features = ["defmt", "nrf52840", "time-driver-rtc1"] }
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "d76cd5ceaf5140c48ef97180beae156c0c0e07c8", features = ["defmt", "time"] }
defmt = "0.3.0"

[dev-dependencies]
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "d76cd5ceaf5140c48ef97180beae156c0c0e07c8", features = ["defmt"] }
#esp-at-driver = { version = "0.1.0", git = "https://github.com/rukai/esp-at-driver", rev = "5df0356702c0253c13ef0d7a2b611be50c9c04c9" }
cortex-m = "0.7.2"
cortex-m-rt = "0.7.1"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
futures = { version = "0.3.14", default-features = false, features = ["async-await"] }
heapless = "0.7"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
